--- a/proyects.html
+++ b/proyects.html
@@ -96,9 +96,9 @@
      
 
     <!--Pie de pagina-->
-    <footer>
-      <nav class="container-fluid text-center bg-dark ">
-        <div class="row"> 
+    <footer class="position-relative">
+      <nav class="container-fluid text-center">
+        <div class="row postion-absolute bottom-0"> 
           <!--Corpright-->
           <div class="col-sm-6">
             <h4 class="fs-6"> 
