--- a/services.html
+++ b/services.html
@@ -15,7 +15,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   </head>
 
-    <!--Nav bar de la pagina-->
+    <!--Pagina principal-->
+  <body>
     <header>
         <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
             <div class="container-fluid">
@@ -77,39 +78,39 @@
       </main>
 
     <!--Pie de pagina-->
-    <footer>
-        <nav class="container-fluid text-center bg-dark">
-          <div class="row"> 
-            <!--Corpright-->
-            <div class="col-sm-6">
-              <h4 class="fs-6"> 
-                  <em>© 2023 by Estudio Boreal</em>
-              </h4>
-            </div>
-  
-            <!--Enlaces a redes-->
-            <div class="col-sm-6">
-              <ul class="nav justify-content-center"> 
-                  <li class="nav-item">
-                      <a href="">
-                          <img src="" alt="Instagram">
-                      </a>
-                  </li>
-                  <li class="nav-item">
-                      <a href="">
-                          <img src="" alt="Facebook">
-                      </a>
-                  </li>
-                  <li class="nav-item">
-                      <a href="">
-                          <img src="" alt="Email">
-                      </a>
-                  </li>
-              </ul>
-            </div>
+    <footer class="position-relative">
+      <nav class="container-fluid text-center">
+        <div class="row postion-absolute bottom-0"> 
+          <!--Corpright-->
+          <div class="col-sm-6">
+            <h4 class="fs-6"> 
+                <em>© 2023 by Estudio Boreal</em>
+            </h4>
           </div>
-        </nav>
-      </footer>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-</body>
+
+          <!--Enlaces a redes-->
+          <div class="col-sm-6">
+            <ul class="nav justify-content-center"> 
+                <li class="nav-item">
+                    <a href="">
+                        <img src="" alt="Instagram">
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="">
+                        <img src="" alt="Facebook">
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="">
+                        <img src="" alt="Email">
+                    </a>
+                </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  </body>
 </html>
