--- a/contact.html
+++ b/contact.html
@@ -40,10 +40,7 @@
      <!--Secciones de la pagina-->
     <main class="container-fluid justify-content-center">
         <section class="text-center"> <!-- Titulo principal y descripcion-->
-            <h1 class="main-title">Nosotros</h1>
-            <p>
-                Esta es la seccion acerca de nosotros 
-            </p> 
+            <h1 class="main-title">Contacto</h1>
         </section>
     
      <!-- Formulario de consulta-->
